tests/samples/negative/pattern_matching/match_expression_const_initializer.ax
module match_expression_const_initializer;

enum Choice: u8 {
    yes = 1,
    no = 2,
}

const VALUE: i32 = match Choice.yes {
    .yes => 1,
    .no => 0,
};

fn main() -> i32 {
    return VALUE;
}
